# openssl-vendro

./: Cargo.toml  cert-key.pem  cert.p12  cert.pem  validate.sh
src/: main.rs
