[package]
name = "openssl-vendor-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/sfackler/rust-openssl/pull/1904
openssl = { version = "0.10.48", features = ["vendored"] }
